@@ -11,6 +11,9 @@ Evan Wright Shlomy Reinstein and Marcelo Vanzin for contributing to this
 release.
 
 {{{ Bug fixes
+- Fixed an exception that prevent from opening properties dialog of non local
+  files in the VFS Browser (#3199876 - Matthieu Casanova)
+
 - Latex string literal fixed : when starting with `` the String literal can
   now end with " or '' (#3152515 - patch #3162735 Evan Wright)
 
